AX: textUnderElement does not find visibility:visible text when it's within a visibility:hidden container https://bugs.webkit.org/show_bug.cgi?id=271995 rdar://problem/125738704

Reviewed by Andres Gonzalez.

When `visibility:visible` is placed within a `visibility:hidden` container, the elements within are rendered. But currently,
`AccessibilityNodeObject::textUnderElement` stops immediately when encountering `visibility:hidden`, meaning we can miss
this nested `visibility:visible` text.

With this patch, when encountering a hidden style, we still search the subtree for text that isn't hidden.

This patch also fixes a bug where we never updated the cached accessibility text of controls associated with a label
via the for attribute when the for attribute of that label changes.

* LayoutTests/accessibility/button-hidden-and-unhidden-text-expected.txt: Added.
* LayoutTests/accessibility/button-hidden-and-unhidden-text.html: Added.
* LayoutTests/accessibility/hidden-label-expected.txt: Added.
* LayoutTests/accessibility/hidden-label.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/accname/name/comp_hidden_not_referenced-expected.txt:
* LayoutTests/platform/glib/accessibility/button-hidden-and-unhidden-text-expected.txt: Added.
* LayoutTests/platform/glib/accessibility/hidden-label-expected.txt: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/accessibility/hidden-label-expected.txt: Added.
* Source/WebCore/accessibility/AXCoreObject.h:
(WebCore::TextUnderElementMode::isHidden):
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::isDOMHidden):
(WebCore::AXObjectCache::addLabelForRelation):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityMathMLElement.cpp:
(WebCore::AccessibilityMathMLElement::textUnderElement const):
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::textUnderElement const):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isDOMHidden const):
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textUnderElement const):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::removeNode):

Canonical link: https://commits.webkit.org/277004@main